<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.lagolesoftware.app</groupId>
		<artifactId>sov_school_back</artifactId>
		<relativePath>../pom.xml</relativePath>
		<version>1.0-SNAPSHOT</version>
	</parent>

	<groupId>com.sovereingschool</groupId>
	<artifactId>back_common</artifactId>
	<version>0.0.1-SNAPSHOT</version>


	<name>back_common</name>

	<description>Partes comunes de la plataforma</description>

	<properties>
		<java.version>21</java.version>
	</properties>
	<packaging>jar</packaging>

	<dependencies>

	</dependencies>

</project>